--- a/diplom/NewIzmerenie.xaml
+++ b/diplom/NewIzmerenie.xaml
@@ -6,63 +6,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         Title="Новое измерение"
         Width="604.609"
-        Height="508.248"
+        Height="475.248"
         mc:Ignorable="d">
-    <Grid>
+    <Grid Margin="0,0,0,-2">
         <ComboBox x:Name="comboBox"
-                  Margin="8,132,415,0"
+                  Margin="8,94,415,0"
                   VerticalAlignment="Top" />
         <Label x:Name="label"
-               Margin="8,52,0,0"
+               Margin="8,14,0,0"
                VerticalAlignment="Top"
                Content="Тип измерения" HorizontalAlignment="Left" Width="96" />
         <Label x:Name="label1"
-               Margin="8,105,0,0"
+               Margin="8,68,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Выберите категорию" Width="129" />
         <ComboBox x:Name="comboBox1"
-                  Margin="8,78,415,0"
+                  Margin="8,40,415,0"
                   VerticalAlignment="Top" />
         <Button x:Name="button"
                 Height="22"
-                Margin="0,131,311,0"
+                Margin="0,94,311,0"
                 VerticalAlignment="Top"
                 Click="button_Click"
                 Content="Редактировать" HorizontalAlignment="Right" Width="100" />
         <ComboBox x:Name="comboBox2"
-                  Margin="8,178,311,0"
+                  Margin="8,140,311,0"
                   VerticalAlignment="Top">
             <ComboBoxItem Content="Да" />
             <ComboBoxItem Content="Нет" />
         </ComboBox>
         <TextBox x:Name="textBox"
                  Width="278"
-                 Height="23"
-                 Margin="8,232,0,0"
+                 Height="24"
+                 Margin="8,194,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  TextWrapping="Wrap" />
         <TextBox x:Name="textBox1"
                  Width="278"
-                 Height="23"
-                 Margin="8,282,0,0"
+                 Height="24"
+                 Margin="8,244,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  TextWrapping="Wrap" />
         <Label x:Name="label2"
-               Margin="8,152,0,0"
+               Margin="8,114,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Консервация" Width="84" />
         <Label x:Name="label3"
-               Margin="8,206,0,0"
+               Margin="8,168,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Объем пробы" Width="90" />
         <Label x:Name="label4"
                Width="88"
-               Margin="8,255,0,0"
+               Margin="8,218,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Имя пробы"
@@ -77,92 +77,88 @@
             </Label.RenderTransform>
         </Label>
         <Button x:Name="button1"
-                Height="20"
-                Margin="490,0,10,10"
-                VerticalAlignment="Bottom"
+                Margin="490,403,10,20"
                 Click="button1_Click"
                 Content="Ввести" />
         <Button x:Name="button2"
                 Width="86"
-                Height="20"
-                Margin="10,0,0,10"
+                Margin="10,403,0,20"
                 HorizontalAlignment="Left"
-                VerticalAlignment="Bottom"
                 Content="Отмена" />
         <Label x:Name="label5"
-               Margin="8,305,0,0"
+               Margin="8,268,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Дата забора" Width="79" />
         <TextBox x:Name="textBox2"
                  Width="278"
-                 Height="23"
-                 Margin="8,331,0,0"
+                 Height="22"
+                 Margin="8,294,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
                  TextWrapping="Wrap" />
         <Label x:Name="label6"
-               Margin="331,52,0,0"
+               Margin="331,14,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Страна" Width="50" />
         <Label x:Name="label7"
-               Margin="331,103,0,0"
+               Margin="331,66,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Регион" Width="50" />
         <Label x:Name="label8"
-               Margin="331,206,0,0"
+               Margin="331,168,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Улица" Width="44" />
         <Label x:Name="label9"
-               Margin="331,255,0,0"
+               Margin="331,218,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Дом" Width="35" />
         <Label x:Name="label10"
-               Margin="331,152,0,0"
+               Margin="331,114,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Город/населённый пункт" Width="153" />
         <TextBox x:Name="textBox3"
                  Width="256"
-                 Height="23"
-                 Margin="331,77,0,0"
+                 Height="22"
+                 Margin="331,40,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
                  TextWrapping="Wrap" />
         <TextBox x:Name="textBox4"
                  Width="256"
-                 Height="23"
-                 Margin="331,131,0,0"
+                 Height="22"
+                 Margin="331,94,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
                  TextWrapping="Wrap" />
         <TextBox x:Name="textBox5"
                  Width="256"
-                 Height="23"
-                 Margin="331,178,0,0"
+                 Height="24"
+                 Margin="331,140,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
                  TextWrapping="Wrap" />
         <TextBox x:Name="textBox6"
                  Width="256"
-                 Height="23"
-                 Margin="331,232,0,0"
+                 Height="24"
+                 Margin="331,194,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
                  TextWrapping="Wrap" />
         <TextBox x:Name="textBox7"
                  Width="256"
-                 Height="23"
-                 Margin="331,282,0,0"
+                 Height="24"
+                 Margin="331,244,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
@@ -170,55 +166,53 @@
         <Button x:Name="button3"
                 Width="108"
                 Height="30"
-                Margin="258,365,0,0"
+                Margin="258,328,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Click="button3_Click"
                 Content="Выбрать на карте" />
         <TextBox x:Name="textBox8"
-                 Margin="8,406,395,0"
+                 Margin="8,368,395,0"
                  Text=""
-                 TextWrapping="Wrap" Height="23" VerticalAlignment="Top" />
+                 TextWrapping="Wrap" Height="24" VerticalAlignment="Top" />
         <Label x:Name="label11"
-               Margin="393,380,0,0"
+               Margin="393,342,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Долгота" Width="55" />
         <Label x:Name="label12"
-               Margin="8,377,0,0"
+               Margin="8,340,0,0"
                HorizontalAlignment="Left"
                VerticalAlignment="Top"
                Content="Широта" Width="54" />
         <TextBox x:Name="textBox9"
                  Width="194"
-                 Height="23"
-                 Margin="393,406,0,0"
+                 Height="24"
+                 Margin="393,368,0,0"
                  HorizontalAlignment="Left"
                  VerticalAlignment="Top"
                  Text=""
                  TextWrapping="Wrap" />
         <Button x:Name="button4"
                 Width="137"
-                Margin="450,316,0,0"
+                Margin="450,278,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Click="button4_Click"
                 Content="Получить координаты" />
         <Button x:Name="button_Copy"
                 Height="22"
-                Margin="0,78,311,0"
+                Margin="0,40,311,0"
                 VerticalAlignment="Top"
                 Click="button_Click1"
                 Content="Редактировать" HorizontalAlignment="Right" Width="100" />
         <Button x:Name="button5"
                 Width="137"
-                Margin="450,339,0,0"
+                Margin="450,302,0,0"
                 HorizontalAlignment="Left"
                 VerticalAlignment="Top"
                 Click="button5_Click"
                 Content="Проверить на карте" />
-        <Label x:Name="label13" Content="Название пробы" Margin="149,10,0,0" HorizontalAlignment="Left" Width="104" Height="26" VerticalAlignment="Top"/>
-        <TextBox x:Name="textBox10" Margin="258,10,174,0" TextWrapping="Wrap" Height="23" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
